RESOLVED FIXED272603
UnifiedPDF: Zooming in with keyboard in Safari, then pinch-zooming in, breaks keyboard zoom *out*
https://bugs.webkit.org/show_bug.cgi?id=272603
Summary UnifiedPDF: Zooming in with keyboard in Safari, then pinch-zooming in, breaks...
Tim Horton
Reported 2024-04-12 13:46:16 PDT
UnifiedPDF: Zooming in with keyboard in Safari, then pinch-zooming in, breaks keyboard zoom *out*
Attachments
Tim Horton
Comment 1 2024-04-12 13:46:25 PDT
Tim Horton
Comment 2 2024-04-12 15:05:31 PDT
EWS
Comment 3 2024-04-12 17:00:30 PDT
Committed 277442@main (baf80f46662d): <https://commits.webkit.org/277442@main> Reviewed commits have been landed. Closing PR #27207 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.